# python-data-ai

./: LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
python_data_gpt/: __init__.py  dataset.py  features.py  plots.py
python_data_gpt/modeling/: predict.py  train.py
